# proj_examp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
pg/: models.py
pg/migrations/: env.py
pg/migrations/versions/: 1e7fd67b930b_create_user_table.py  2b6da7bfcd56_add_tags_and_task_tag_many_to_many_.py  61d0f928eb6c_create_task_table.py  fe6efd5ecaab_add_category_table_and_category_id_to_.py
src/api/: deps.py  errors.py
src/api/v1/: auth.py  categories.py  health.py  router.py  tags.py  tasks.py  users.py
src/core/: config.py  security.py
src/db/: base.py  pool.py
src/exceptions/: auth.py  base.py  category.py  tag.py  task.py  user.py
src/middleware/: logging.py  metrics.py
src/models/: __init__.py  category.py  tag.py  task.py  task_tag.py  user.py
src/repository/: base.py  category.py  tag.py  task.py  user.py
src/schemas/: auth.py  category.py  health.py  tag.py  task.py  user.py
src/service/: auth.py  category.py  tag.py  task.py  user.py
src/utils/: logging.py  s3.py
tests/: conftest.py  test_auth.py  test_health.py
